--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h4>TL:TR 
         <a href="./assessments/assessment-1/index.html">Assessment 1</a>
-        <a href="./assessments/assessment-2/index.html">Assessment 2</a>
+        <a href= "assessments/assessment-2/table.html">Assessment 2</a>
     </h4>
     <!-- This is the main page for AltSchool Africa -->
     <h1>This is for AltSchool Africa</h1>
@@ -41,7 +41,6 @@
     <!--Internal Navigation-->
         <a href="./about/index.html">About</a>
         <a href="./index.html">Home</a>
-        <a href="./assessments/week-1/index.html">Profile</a>
     <!--External Navigation-->
         <a href="https://www.altschoolafrica.com" target="_blank">AltSchool Africa</a>
 
